--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,5 @@ node_modules/
 
 package-lock.json
 
-PopDynamicShareTest.xcworkspace/xcshareddata/
-PopDynamicShareTest.xcworkspace/xcuserdata/
+*.xcworkspace/xcshareddata/
+*.xcworkspace/xcuserdata/
