--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "version": "0.0.5",
   "main": "PopTestImage/bootup.js",
   "dependencies": {
-    "@newchromantics/popengine": "^0.0.22",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "ws": "latest"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
